[package]
name = "price-parser"
version = "0.1.0"
authors = ["kobe <roryshively1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
